# airflow-dbt-warehouse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: ecommerce_warehouse_elt.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/bronze/: _sources.yml  bronze_customers.sql  bronze_events.sql  bronze_orders.sql  bronze_products.sql  schema.yml
dbt/models/gold/: customer_revenue_mart.sql  daily_revenue_mart.sql  marketing_funnel_mart.sql  schema.yml
dbt/models/silver/: dim_customers.sql  dim_dates.sql  dim_products.sql  fct_orders.sql  fct_web_events.sql  schema.yml
dbt/seeds/: country_regions.csv
dbt/tests/: assert_completed_orders_have_positive_quantity.sql
docker/airflow/: Dockerfile  requirements.txt
docker/dbt/: Dockerfile  requirements.txt
scripts/: __init__.py  config.py  ingest_raw_data.py  pipeline_summary.py  sample_data.py
sql/: example_queries.sql  init.sql
tests/: test_sample_data.py
