[project]
name = "airflow-dbt-warehouse"
version = "0.1.0"
description = "Production-style local ELT warehouse with Airflow, dbt, PostgreSQL, and Docker Compose."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2.3",
  "psycopg2-binary>=2.9.10",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.4",
  "pre-commit>=4.0.1",
  "dbt-core>=1.9.0",
  "dbt-postgres>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
